[gd_scene load_steps=2 format=3 uid="uid://d3uxf1hs4xqhr"]

[ext_resource type="Script" path="res://Scenes/Components/musical_stand_player_detector.gd" id="1_21sv1"]

[node name="MusicalStandPlayerDetector" type="Area3D"]
collision_layer = 512
collision_mask = 257
script = ExtResource("1_21sv1")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
